# ironflow

./: ..gitignore.un~  .Cargo.toml.un~  .gitignore  Cargo.toml  Cargo.toml~  README.md  cusrc
ndarray/: Cargo.toml  README.md  build.rs
ndarray/cusrc/: add.cu  arith.cu  div.cu  extdot.cu  mul.cu  sub.cu
ndarray/src/: async_rt.rs  cpu_single_thread.rs  lib.rs  proto.rs  seal_libc.rs
ndarray/src/_cuda_unistream/: mod.rs
ndarray/src/_cuda_unistream/_arr/: _device.rs
ndarray/src/_proto/: mod.rs
ndarray/src/_proto/_arr/: _device.rs  _ndarray.rs
ndarray/src/_proto/_ops_ext/: _einsum.rs  _extdot.rs  mod.rs
ndarray/src/_proto/arr/: device.rs  ndarray.rs
ndarray/src/cpu/: add.rs  device.rs  div.rs  from_dev.rs  from_val.rs  mod.rs  mul.rs  sub.rs
ndarray/src/cpu_unistream/: mod.rs
ndarray/src/cpu_unistream/_arr/: _device.rs  _from_vec.rs  _into_vec.rs  mod.rs
ndarray/src/cpu_unistream/_ops/: _add.rs  _div.rs  _mul.rs  _sub.rs  mod.rs
ndarray/src/cpu_unistream/arr/: mod.rs
ndarray/src/cuda_unistream/: mod.rs
ndarray/src/cuda_unistream/_arr/: _device.rs  cuda_binding.rs  cuda_error.rs  cuda_module.rs  mod.rs
ndarray/src/cuda_unistream/_ops/: mod.rs
ndarray/src/naive_async/: add.rs  div.rs  mod.rs  sub.rs
tensor/: Cargo.toml
