[package]
name = "ironflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"               # Async version of the Rust standard library
ndarray = {path="./ndarray"}       # Unified indexed computation on miscellaneous devices

