[package]
name = "tensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { path='../ndarray' }
futures = "0.3.21"                # An implementation of futures and streams featuring zero allocations, composability, and iteration
async-std = "1.12.0"              # Async version of the Rust standard library